tests/spec/emit/snapshots/or_pattern_on_interface_three_alts_middle_has_field_check.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event) -> int {
    match e {
      events.Click { .. } | events.Scroll { delta: 10 } | events.KeyPress { .. } => 1,
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e := e.(type) {
	case events.Click:
		return 1
	case events.Scroll:
		if e.Delta == 10 {
			return 1
		}
		return 0
	case events.KeyPress:
		return 1
	default:
		return 0
	}
}
