tests/spec/emit/snapshots/or_pattern_on_interface_with_bindings_expands_to_separate_arms.snap
---
source: tests/spec/emit/patterns.rs
description: "input: \nimport \"go:example.com/events\"\n\nfn handle(e: events.Event) -> int {\n  match e {\n    events.Click { x } | events.Scroll { x } => x + 1,\n    _ => 0,\n  }\n}\n"
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e := e.(type) {
	case events.Click:
		return e.X + 1
	case events.Scroll:
		return e.X + 1
	default:
		return 0
	}
}
