tests/spec/emit/snapshots/or_pattern_on_interface_with_guard.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event, active: bool) -> int {
    match e {
      events.Click { .. } | events.Scroll { .. } if active => 1,
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event, active bool) int {
	switch e.(type) {
	case events.Click, events.Scroll:
		if active {
			return 1
		}
		return 0
	default:
		return 0
	}
}
