tests/spec/emit/snapshots/or_pattern_strings.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(s: string) -> int {
    match s {
      "yes" | "y" | "true" => 1,
      "no" | "n" | "false" => 0,
      _ => -1,
    }
  }
---
package main

func test(s string) int {
	if s == "yes" || s == "y" || s == "true" {
		return 1
	} else if s == "no" || s == "n" || s == "false" {
		return 0
	}
	return -1
}
