tests/spec/emit/snapshots/or_pattern_with_bindings.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum E { A(int), B(int) }
  
  fn test(e: E) -> int {
    match e {
      A(x) | B(x) => x,
    }
  }
---
package main

func MakeEA(arg0 int) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 int) E {
	return E{Tag: EB, B: arg0}
}

type ETag uint8

const (
	EA ETag = iota
	EB
)

type E struct {
	Tag ETag
	A   int
	B   int
}

func test(e E) int {
	if e.Tag == EA {
		return e.A
	}
	return e.B
}
