tests/spec/emit/snapshots/package_local_option_alias_does_not_collide_with_prelude_option.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:example.com/validator"
  
  fn test() {
    let _ = validator.WithOption()
  }
---
package main

import "example.com/validator"

func test() {
	validator.WithOption()
}
